--- a/index.html
+++ b/index.html
@@ -82,6 +82,7 @@
     <h1>Newsletter</h1>
     <h3>Pour obtenir nos dernières offres exclusives, entrez votre email ci-dessous</h3>
     <form class="form-inline">
+	    <form method="POST" action="lien" class="form-inline">
   <div class="form-group">
     <label for="email">Email address:</label>
     <input type="email" class="form-control col-md-6" id="email">
