--- a/index.html
+++ b/index.html
@@ -82,11 +82,11 @@
     <h1>Newsletter</h1>
     <h3>Pour obtenir nos dernières offres exclusives, entrez votre email ci-dessous</h3>
     <form class="form-inline">
-	    <form method="POST" action="https://thomaslh.wufoo.com/forms/mn69u001ppad4j/" class="form-inline">
+	  
   <div class="form-group">
     <label for="email">Email address:</label>
     <input type="email" class="form-control col-md-6" id="email">
-   <button type="submit" class="btn btn-danger">Soumettre</button>
+   <button type="submit" class="btn btn-danger">Soumettre</button> href="https://thomaslh.wufoo.com/forms/mn69u001ppad4j/"
   </div>
 </form>
 <div/>
