--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
   <div class="form-group">
     <label for="email">Email address:</label>
     <input type="email" class="form-control col-md-6" id="email">
-   <button type="submit" class="btn btn-danger">Soumettre</button> href="https://thomaslh.wufoo.com/forms/mn69u001ppad4j/"
+   <button type="submit" class="btn btn-danger">Soumettre</button>
   </div>
 </form>
 <div/>
