--- a/index.html
+++ b/index.html
@@ -87,6 +87,7 @@
     <label for="email">Email address:</label>
     <input type="email" class="form-control col-md-6" id="email">
    <button type="submit" class="btn btn-danger">Soumettre</button>
+<input type="button" onclick="document.location.href="https://thomaslh.wufoo.com/forms/mn69u001ppad4j/" value="Retour">
   </div>
 </form>
 <div/>
